style buttons to work

--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Lyric Hunt</title>
 </head>
+
 <body>
     <header>
         <h1>Lyric Hunt</h1>
-        <form id="form"></form>
-        <input type="text" id="search" placeholder="Enter artist/Song name...">
-        <button>Search</button>
+        <form id="form">
+            <input type="text" id="search" placeholder="Enter artist/Song name...">
+            <button>Search</button>
+        </form>
     </header>
     <div id="result" class="container">
         <p>Results will be displayed here</p>
@@ -20,4 +23,5 @@
     <div id="more" class="container centered"></div>
     <script src="script.js"></script>
 </body>
+
 </html>
